--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@grpc/grpc-js": "^1.14.2",
     "@grpc/proto-loader": "^0.8.0",
     "@prisma/client": "^5.22.0",
+    "amqplib": "^0.10.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
